[tool.poetry]
authors = ["flisky <jifeng.yin@longbridge.sg>"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "A Python library for Longbridge Open API"
include = ["longbridge/**/*"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/longbridgeapp/openapi-python"
name = "longbridge"
version = "0.1.1"

[tool.poetry.dependencies]
importlib-metadata = { version = "^4", python = "<3.8" }
python = "^3.7"

[tool.poetry.dev-dependencies]
myst-parser = "^0.17"
sphinx = "^4.5"
sphinx-autobuild = "2021.3.14"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = "black"
